实现查询关注列表, 粉丝列表

--- a/following_fan_group/src/main/resources/application.yml
+++ b/following_fan_group/src/main/resources/application.yml
@@ -12,5 +12,5 @@ spring:
 mybatis:
   #   resources 目录下不会被  MyBatis 自动扫描到，所以需要在 application.yml 配置文件中告诉 MyBatis 具体的扫描路径
   mapper-locations: classpath:/mapper/*.xml
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 打印执行的sql语句
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 打印执行的sql语句
